refactor: centralize AI output validation with AnalyzerOutputValidator and update workflow services for improved robustness